@startuml

Floor "many" --* "one" Building
Elevator "many" --* "one" Building
Passenger "many" --* "one" Floor
Passenger "many" --o "one" Elevator

class Passenger{
    -destinationFloor : int
    +Passenger(int destFloor);
}

class Elevator {
    -currentFloor : int
    -passengerList : List<Passenger>
    -active : boolean
    -capacity : int
    Direction : enum
    +Elevator()
}

class Floor{
    -number : int
    -passengerList : List<Passenger>
    -pushedButton : boolean
    +Floor(int number)
}

class Building{
    -{static} FLOOR : char[]
    -{static} ELEVATOR : char[]
    -{static} PASSENGER : char[]
    -floorList : List<Floor>
    -elevatorList : List<Elevator>
    +Building()
    +Building(int floorCount, int elevatorCount)
    +draw()
}



@enduml